# rust_learnings

./: Cargo.toml
actix_web/actix_web_docs/: Cargo.toml  files.html
redis/redis_workers/: .env  Cargo.toml
redis/redis_workers/src/: lib.rs  redis_play.rs  redis_tut.rs
redis/redis_workers_sidekiq/client/: Cargo.toml
redis/redis_workers_sidekiq/server/: Cargo.toml
serde/: Cargo.toml
serde/src/: main.rs
src/: as_ref.rs  lib.rs  main.rs
src/actix_web/: actix_web.rs
src/iterators/: crust_of_rust_iterators.rs  iterators_playfile.rs  mod.rs  ryan_levick_iterators.rs
src/lifetimes/: milford_lifetimes.rs
src/play_tokio/: mod.rs  play_tokio.rs
src/strings/: milford_strings.rs
src/traits_trait_objects/: crust_of_rust_dispatch_fat_pointers.rs  static_to_dynamic_dispatch_example.rs  trait_bounds_custom.rs
stdlib/: Cargo.toml
stdlib/src/: lib.rs  main.rs
stdlib/src/conversions/: as_ref.rs  from_into.rs
stdlib/src/docs/: lib.rs
stdlib/src/iterators/: crust_of_rust_iterators.rs
stdlib/src/lifetimes/: crust_of_rust_lifetimes.rs  mod.rs
stdlib/src/packages_crates_modules/: lib.rs
stdlib/src/traits_trait_objects/: mod.rs  trait_obj_w_second_marker_trait.rs
tokio/blocking_vs_not_experiments/: Cargo.toml
tokio/rebuild_redis_tokio_tut/: Cargo.toml
tokio/rebuild_redis_tokio_tut/examples/: hello.rs
tokio/rebuild_redis_tokio_tut/src/: main.rs
tokio/refactoring_to_rust/: Cargo.toml
tokio/refactoring_to_rust/src/: main.rs
