[package]
name = "_learning"
version = "0.1.0"
authors = ["imoisejevs <iljamoisejevs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
serde = "1.0.126"
tokio = { version = "1", features = ["full"] }