[package]
name = "redis_workers"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.3"
redis = { version="0.20.1", features=["tokio-native-tls-comp"] }
serde = { version = "1.0.126", features = ["derive"] }
serde-redis = "0.11.0"
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
