[package]
name = "blocking_vs_not_experiments"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
rand = "0.8.3"
tokio = { version = "1", features = ["full"] }
