[package]
name = "redis_workers_sidekiq_server"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
sidekiq-rs = "0.7.0"
structopt = "0.3.21"
structopt-derive = "0.4.14"
